--- a/engines/attendance/app/views/attendance/forms/show.html.haml
+++ b/engines/attendance/app/views/attendance/forms/show.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .two.wide.mobile.column
-    %a{href: "#{new_ticket_path}"}
+    %a{href: "#{main_app.root_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header #{@form.name}
