--- a/engines/entity/app/views/entity/forms/show.html.haml
+++ b/engines/entity/app/views/entity/forms/show.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .two.wide.mobile.column
-    %a{href: "#{main_app.root_path}"}
+    %a{href: "#{entity.root_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header #{@form.name}
@@ -13,15 +13,5 @@
   .column.content-form
     %table.ui.celled.table
       %tbody.black
-        - @form.form_fields.where(allow: true).each do |field|
-          %tr
-            %td
-            %td
-              %b= field.label
-              %br/
-              - if field._file?
-                Foto enviada
-              - else
-                = @form_value.store[field.name].humanize
-    
+        = @form_value.inspect
         
