--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -89,7 +89,7 @@
       .text-center
         Portas abertas
 
-  - if current_cadastre.cpf == '01801850127'
+  - if @ticket_policy.allow_to_question? 
     .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
       .ui.segment.text-center
         %a{href: "#{attendance.new_form_path(form_id: 2)}"}
