--- a/engines/attendance/app/views/attendance/forms/show.html.haml
+++ b/engines/attendance/app/views/attendance/forms/show.html.haml
@@ -20,7 +20,7 @@
               %b= field.label
               %br/
               - if field._file?
-                Foto enviada
+                Arquivo enviado
               - else
                 = @form_value.store[field.name].humanize
     
