--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -20,10 +20,10 @@
         %i.icon.refresh.huge.gray
     .text-center
       Atualização de dados de contato
-  - if current_entity.allow_questions?
-    .column
-      .ui.segment.text-center
-        %a{href: "#{entity.new_form_path(form_id: 3)}"}
-          %i.icon.question.huge.gray
-      .text-center
-        Questionários
+  //- if current_entity.allow_questions?
+  //.column
+  //    .ui.segment.text-center
+  //      %a{href: "#{entity.new_form_path(form_id: 3)}"}
+  //        %i.icon.question.huge.gray
+  //    .text-center
+  //      Questionários
