--- a/engines/candidate/app/views/candidate/cadastres/indication.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/indication.html.haml
@@ -40,7 +40,7 @@
                         %a.header
                           Data de inativação
                         .description
-                          = indication.inactive_date.strftime('%d/%m/%Y')
+                          = indication.inactive_date.strftime('%d/%m/%Y') rescue nil
   - else
     .column
       .ui.segment
