--- a/engines/entity/app/views/entity/indications/index.html.haml
+++ b/engines/entity/app/views/entity/indications/index.html.haml
@@ -12,10 +12,20 @@
         - @units.each do |entity|
           %tr
             %td
-              %p= link_to entity.unit.complete_address, "#"
-              = entity.unit.city.name
+              %h4.ui.image.header
+                %i.icon.big.check{class: entity.candidato_indicado? ? 'green' : 'gray'}
+                .content
+                  = link_to entity.unit.complete_address, new_indication_path(indication_id: entity.id)
+                  .sub.header
+                    = entity.unit.city.name
+                  .sub.header
+                    .mini-divider
+                    = entity.cadastre.name rescue nil
+                    %b= entity.cadastre.presenter.current_situation_name rescue nil
+                    
       - else
         %tr
           %td
           %td.text-center
             %i Nenhuma unidade a ser distribuída.
+
