Revisão de permissão de visualização de menus

--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -20,28 +20,28 @@
         %i.icon.refresh.huge.gray
     .text-center
       Atualização de dados de contato
-  - if params[:demo].to_i == 1 || current_entity.cnpj == '07935627000183'
+  - if params[:demo].to_i == 1 || (current_entity.cnpj == '07935627000183')
     .column
       .ui.segment.text-center
         %a{href: "#{entity.indications_path}"}
           %i.icon.building.huge.gray
       .text-center
         Distribuição de unidades 
-  - if params[:demo].to_i == 1 || current_entity.cnpj == '07935627000183'
+  - if params[:demo].to_i == 1 || (current_entity.cnpj == '07935627000183')
     .column
       .ui.segment.text-center
         %a{href: "#{entity.requeriments_path}"}
           %i.icon.file.huge.gray
       .text-center
         Requerimentos
-  - if params[:demo].to_i == 1 || current_entity.cnpj == '07935627000183'
+  - if params[:demo].to_i == 1 || (current_entity.cnpj == '07935627000183')
     .column
       .ui.segment.text-center
         %a{href: "#{entity.chats_path}"}
           %i.icon.chat.huge.gray
       .text-center
         Conversas
-  - if current_entity.allow_questions? && params[:demo].to_i == 1 || current_entity.cnpj == '07935627000183'
+  - if (current_entity.allow_questions? && params[:demo].to_i == 1) || (current_entity.cnpj == '07935627000183')
     .column
       .ui.segment.text-center
         %a{href: "#{entity.new_form_path(form_id: 3)}"}
