--- a/engines/attendance/app/views/attendance/requeriments/_form.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @requeriment, url: entity.requeriments_path,  html: { :multipart => true } do |f|
+= simple_form_for @requeriment, url: attendance.requeriments_path,  html: { :multipart => true } do |f|
   = f.input :description_subject, label: "Descrição da solicitação"
   = f.simple_fields_for :digital_document_forms do |builder|
     = render 'digital_document_form_fields', f: builder
