Adicionando chats de entidade

--- a/engines/entity/app/views/entity/chat_comments/show.html.haml
+++ b/engines/entity/app/views/entity/chat_comments/show.html.haml
@@ -12,7 +12,7 @@
       .column.segment
         %table.ui.celled.table
           %tbody
-            %tr{class: @chat_comment.candidate_read ? 'read' : 'not-read'}
+            %tr{class: @chat_comment.entity_read ? 'read' : 'not-read'}
               %td
                 = @chat_comment.content
             %tr
