--- a/engines/entity/app/views/entity/chats/_form.html.haml
+++ b/engines/entity/app/views/entity/chats/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for @chat, url: chats_path, method: :post do |f|
   = f.association :chat_category, label: "Assunto", prompt: 'Selecione'
+  = f.input :content
   .mini-margin
-  = f.submit "Prosseguir", class: 'btn btn-success', data: { disable_with: t(:disable_with) }
+  = f.submit "Iniciar conversa", class: 'ui button green fluid', data: { disable_with: t(:disable_with) }
