--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -27,21 +27,21 @@
           %i.icon.building.huge.gray
       .text-center
         Distribuição de unidades 
-  - if params[:demo].to_i == 1 || (current_entity.cnpj == '07935627000183')
+  - if current_entity.allow_accredited?
     .column
       .ui.segment.text-center
         %a{href: "#{entity.requeriments_path}"}
           %i.icon.file.huge.gray
       .text-center
         Requerimentos
-  - if params[:demo].to_i == 1 || (current_entity.cnpj == '07935627000183')
+  - if current_entity.allow_accredited?
     .column
       .ui.segment.text-center
         %a{href: "#{entity.chats_path}"}
           %i.icon.chat.huge.gray
       .text-center
         Conversas
-  - if (current_entity.allow_questions? && params[:demo].to_i == 1) || (current_entity.cnpj == '07935627000183')
+  - if current_entity.allow_accredited?
     .column
       .ui.segment.text-center
         %a{href: "#{entity.new_form_path(form_id: 3)}"}
