--- a/engines/person/app/views/person/home/show.html.haml
+++ b/engines/person/app/views/person/home/show.html.haml
@@ -36,3 +36,9 @@
         %i.icon.thumbs.outline.up.huge
     .text-center
       Abono
+  .column
+    .ui.segment.text-center
+      %a{href: "#{person.wallets_path}"}
+        %i.icon.home.outline.up.huge
+    .text-center
+      Carteira Imobiliária
