--- a/engines/entity/app/views/entity/forms/show.html.haml
+++ b/engines/entity/app/views/entity/forms/show.html.haml
@@ -27,4 +27,7 @@
               - else
                 = @form_value.store[field.name].humanize
     
-        
+    
+.ui.grid.container
+  .column.content-form
+    = link_to "Editar dados enviados", edit_form_path(@form_value), class: 'ui button blue fluid'
