--- a/engines/person/app/views/person/wallets/_form.html.haml
+++ b/engines/person/app/views/person/wallets/_form.html.haml
@@ -1,18 +1,9 @@
 = simple_form_for @address, url: wallet_path(@address), method: :put do |f|
   = f.input :cpf
-  = f.input :lat, label: "Latitude", as: :string, input_html: { id: 'lat'}
-  = f.input :lng, label: "Longitude", as: :string, input_html: { id: 'lng'}
+  = f.input :lat, label: "Latitude / Longitude", as: :string, input_html: { id: 'lat'}
   = f.simple_fields_for :data_reference_uploads do |builder|
     = render 'data_reference_upload_fields', f: builder
   = link_to_add_fields "Adicionar arquivo", f, :data_reference_uploads
   .divider
   = f.submit "Salvar dados", class: 'ui button green', data: { disable_with: "Aguarde o processamento das imagens"}
 
-
-:javascript
-  $(document).ready(function(){
-    navigator.geolocation.getCurrentPosition(function(data) {
-      $("#lat").val(data.coords.latitude)
-      $("#lng").val(data.coords.longitude)
-    }); 
-  });
