Inclusão de texto no cabeçalho das conversas

--- a/engines/attendance/app/views/attendance/chats/index.html.haml
+++ b/engines/attendance/app/views/attendance/chats/index.html.haml
@@ -7,6 +7,8 @@
     .sub-title Listagem de conversas
     .divider
 .ui.grid.container
+  %span{style: 'text-align: center; margin-bottom: 30px'}
+    %i As repostas para as conversas são feitas durante o período de Segunda à Sexta das 8 da manhã às 6 da tarde.
   .ui.styled.accordion
     .title
       %i.dropdown.icon
