implementação manifestação de interesse

--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -20,12 +20,13 @@
         %i.icon.refresh.huge.gray
     .text-center
       Atualização de dados de contato
-  .column
-    .ui.segment.text-center
-      %a{href: "#{entity.indications_path}"}
-        %i.icon.building.huge.gray
-    .text-center
-      Distribuição de unidades
+  - if Date.current > Date.parse('2017-08-01')
+    .column
+      .ui.segment.text-center
+        %a{href: "#{entity.indications_path}"}
+          %i.icon.building.huge.gray
+      .text-center
+        Distribuição de unidades
   .column
     .ui.segment.text-center
       %a{href: "#{entity.interests_path}"}
