--- a/engines/entity/app/views/entity/interests/index.html.haml
+++ b/engines/entity/app/views/entity/interests/index.html.haml
@@ -3,7 +3,7 @@
     %a{href: "#{entity.root_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
-    .title-header Endreços Disponíveis
+    .title-header Endereços Disponíveis
     .divider
 .divider
 .ui.grid.container
