--- a/engines/candidate/app/views/candidate/requeriments/new.html.haml
+++ b/engines/candidate/app/views/candidate/requeriments/new.html.haml
@@ -1,7 +1,7 @@
 .ui.grid
   .two.wide.mobile.column
   .thirteen.wide.mobile.column.text-center
-    .title-header Criação de requerimento
+    .title-header Criação de Requerimento
     .sub-title Formulário de criação de renda
 
 .big-divider
