--- a/engines/candidate/app/views/candidate/requeriments/_form.html.haml
+++ b/engines/candidate/app/views/candidate/requeriments/_form.html.haml
@@ -6,7 +6,7 @@
   = f.input :description_subject, label: "Assunto", input_html: {rows: 3}
   = f.simple_fields_for :digital_document_forms do |builder|
     = render 'digital_document_form_fields', f: builder
-  = link_to_add_fields "Adicionar arquivo", f, :digital_document_forms
+  -#= link_to_add_fields "Adicionar arquivo", f, :digital_document_forms
   .divider
   - if flash[:notice].present?
     .ui.label.red
