Atualização da versão da gem core

--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -20,13 +20,13 @@
         %i.icon.refresh.huge.gray
     .text-center
       Atualização de dados de contato
-  - if 1 > 2
+  - if 3 > 2
     .column
       .ui.segment.text-center
         %a{href: "#{entity.indications_path}"}
           %i.icon.building.huge.gray
       .text-center
-        Distribuição de unidades
+        Indicação
   - if current_entity.allow_accredited?
     .column
       .ui.segment.text-center
