Liberação de módulo de indicação

--- a/engines/entity/app/views/entity/dashboard/index.html.haml
+++ b/engines/entity/app/views/entity/dashboard/index.html.haml
@@ -21,12 +21,13 @@
     .text-center
       Atualização de dados de contato
 
-  / .column
-  /    .ui.segment.text-center
-  /      %a{href: "#{entity.indications_path}"}
-  /        %i.icon.building.huge.gray
-  /    .text-center
-  /      Indicação
+  - if current_entity.enterprises.present?
+    .column
+      .ui.segment.text-center
+        %a{href: "#{entity.indications_path}"}
+          %i.icon.building.huge.gray
+      .text-center
+        Indicação
   - if current_entity.allow_accredited?
     .column
       .ui.segment.text-center
