--- a/engines/entity/app/views/entity/interests/show.html.haml
+++ b/engines/entity/app/views/entity/interests/show.html.haml
@@ -52,4 +52,4 @@
             %br/
       %tr 
         %td 
-          = link_to "Enviar por e-mail", "#", class: 'ui button blue fluid'
+          = link_to "Enviar por e-mail", entity_interest_send_mail_path(@interest), class: 'ui button blue fluid'
