Liberação de sorteio entidades

--- a/engines/entity/app/views/entity/interests/index.html.haml
+++ b/engines/entity/app/views/entity/interests/index.html.haml
@@ -21,4 +21,4 @@
           %td
           %td.text-center
             %i Sua entidade não possui nenhuma manifestação
-  = link_to "Realizar nova manifestação", new_entity_interest_path, class: 'ui button green fluid', data: { disable_with: t(:disable_with)} if Rails.env.development?
+  = link_to "Realizar nova manifestação", new_entity_interest_path, class: 'ui button green fluid', data: { disable_with: t(:disable_with)} 
